# bouquet

./: Cargo.toml  LICENSE  README.md
bouquet_client_core/: Cargo.toml  README.md
bouquet_client_core/src/: lib.rs  program_state.rs  simulation.rs
bouquet_core/: Cargo.toml
bouquet_core/src/: lib.rs  message.rs  message_bus.rs  rendering.rs
bouquet_ribbon/: Cargo.toml  README.md
bouquet_ribbon/src/: lib.rs  message.rs
client_core/: Cargo.toml
client_core/rhaiscript/: simulation.rhai
client_core/src/: lib.rs  message.rs  program_state.rs  script.rs  simulation.rs
client_pc/: Cargo.toml  README.md
client_pc/src/: fermium_renderer.rs  lib.rs  main.rs  terminal.rs
client_playdate/: Cargo.toml  Crank.toml  README.md
client_playdate/src/: lib.rs  logger.rs  main.rs  playdate_renderer.rs  renderer.rs
pc_client/: Cargo.toml  README.md
pc_client/src/: lib.rs  main.rs  simulation.rs  terminal.rs
playdate_client/: Cargo.toml  README.md
playdate_client/src/: lib.rs  main.rs
src/: lib.rs  main.rs  message.rs  message_bus.rs  pc_main.rs  playdate_main.rs  simulation.rs  terminal.rs
