[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace]
members = [
  "client_core",
  "client_pc",
  "bouquet_ribbon",
]
exclude = [
  "client_playdate",
]
resolver = "2"

[profile.dev]
panic = "abort"
opt-level = 'z'
lto = true

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

