[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace]
members = [
  "bouquet_client_core",
  "bouquet_core",
  "client_pc",
]
exclude = [
  "client_playdate",
]
resolver = "2"

[profile.dev]
panic = "abort"
opt-level = 'z'
lto = true

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

