[package]
name = "client_pc"
version.workspace = true
edition.workspace = true

[lib]
name = "lib_client_pc"
path = "src/lib.rs"

[[bin]]
name = "client_pc"
path = "src/main.rs"

[dependencies]
bouquet_ribbon = { path = "../bouquet_ribbon" }
client_core = { path = "../client_core" }
hashbrown = "0.13"
libc = { version = "0.2", default-features = false }
libc_alloc = "1.0"
rhai = { version = "1.13", features = [ "no_std", "no_float", "only_i32" ], default_features = false }

