[package]
name = "client_pc"
version.workspace = true
edition.workspace = true

[lib]
name = "lib_client_pc"
path = "src/lib.rs"

[[bin]]
name = "client_pc"
path = "src/main.rs"

[dependencies]
bouquet_client_core = { path = "../bouquet_client_core" }
bouquet_core = { path = "../bouquet_core" }
fermium = "22605.0.0"
hashbrown = "0.14"
libc = { version = "0.2", default-features = false }
libc_alloc = "1.0"
libm = "0.2.7"
rusttype = { version = "0.9.3", default-features = false, features = ["libm-math"] }

