[package]
name = "client_playdate"
version = "0.1.1"
edition = "2021"

[package.metadata.cargo-xbuild]
memcpy = false
sysroot_path = "target/sysroot"
panic_immediate_abort = false

[lib]
name = "bouquet_test_client"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[profile.dev]
panic = "abort"
opt-level = 'z'
lto = true

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true

[dependencies]
anyhow = { version = "1.0", default-features = false }
bouquet_client_core = { path = "../bouquet_client_core" }
bouquet_core = { path = "../bouquet_core" }
crankstart = { path = "../../crankstart" }
crankstart-sys = { path = "../../crankstart/crankstart-sys" }
euclid = { version = "0.20.14", default-features = false, features = [ "libm" ] }
hashbrown = "0.14"
heapless = "0.7"
libc = { version = "0.2", default-features = false }
libc_alloc = "1.0"

[dependencies.cstr_core]
version = "=0.1.2"
default-features = false
features = [ "alloc" ]

